@@ -29,7 +29,6 @@ import java.util.concurrent.CompletionStage;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import org.astraea.common.Configuration;
 import org.astraea.common.Utils;
 import org.astraea.common.admin.Admin;
@@ -113,7 +112,7 @@ class BalancerHandler implements Handler, AutoCloseable {
     final var request = channel.request(TypeRef.of(BalancerPutRequest.class));
     final var taskId = request.id;
     final var taskPhase = balancerConsole.taskPhase(taskId);
-    final var executorConfig = Configuration.of(request.executorConfig);
+    final var executorConfig = new Configuration(request.executorConfig);
     final var executor =
         Utils.construct(request.executor, RebalancePlanExecutor.class, executorConfig);
 
@@ -179,7 +178,7 @@ class BalancerHandler implements Handler, AutoCloseable {
                         tp ->
                             Change.from(
                                 contextCluster.replicas(tp), solution.proposal().replicas(tp)))
-                    .collect(Collectors.toUnmodifiableList());
+                    .toList();
     var report =
         (Supplier<PlanReport>)
             () ->
@@ -216,7 +215,7 @@ class BalancerHandler implements Handler, AutoCloseable {
 
     return new PostRequestWrapper(
         balancerPostRequest.balancer,
-        Configuration.of(balancerPostRequest.balancerConfig),
+        new Configuration(balancerPostRequest.balancerConfig),
         balancerPostRequest.parse(),
         currentClusterInfo);
   }
@@ -283,11 +282,11 @@ class BalancerHandler implements Handler, AutoCloseable {
           before.stream()
               .sorted(Comparator.comparing(Replica::isPreferredLeader).reversed())
               .map(r -> new Placement(r, Optional.of(r.size())))
-              .collect(Collectors.toList()),
+              .toList(),
           after.stream()
               .sorted(Comparator.comparing(Replica::isPreferredLeader).reversed())
               .map(r -> new Placement(r, Optional.empty()))
-              .collect(Collectors.toList()));
+              .toList());
     }
 
     Change(String topic, int partition, List<Placement> before, List<Placement> after) {
